--- a/BOTstep/bootstripP-main/index.html
+++ b/BOTstep/bootstripP-main/index.html
@@ -153,7 +153,7 @@
       <h2>Contact Us</h2>
       <p><strong>Address:</strong> Alegria Cordova Cebu</p>
       <p><strong>Contact Number:</strong> 09123456789</p>
-      <p><strong>Email:</strong> jaygo123@gmail.com</p>
+      <p><strong>Email:</strong> jaygoy123@gmail.com</p>
       <p><strong>Facebook:</strong> <a href="#" target="_blank">Jay Goy</a></p>
     </div>
   </section>
